--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-title> </app-title>
+<app-header></app-header>
+<app-big-card></app-big-card>
+<app-small-card></app-small-card>
 <router-outlet></router-outlet>
