--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<div id="header">
+    <p><a href="http://localhost:4200/">Home Page</a></p>
+    <p><a href="http://www.linkedin.com/in/igor-beraldo-2ab7b81a5" target="_blank">Linkedin</a></p>
+    <p><a href="https://github.com/igorberaldomo?tab=repositories" target="_blank">Github</a></p>
+</div>
