--- a/src/app/components/title/title.component.html
+++ b/src/app/components/title/title.component.html
@@ -1,3 +1,3 @@
-<div class="title">
-    <h1 class="title__text">Welcome to my blog!</h1>
+<div id="title">
+    <h1 id="title__text">Welcome to my blog!</h1>
 </div>
