--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,5 @@
-<p>small-card works!</p>
+<div id="smallCard">
+    <img src="{{image}}" alt="image" id="smallCard__image">
+    <h3 id="smallCard__title"><a [routerLink]="['content', id]">{{title}}</a></h3>
+    <p id="smallCard__text">{{text}}</p>
+</div>
