--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -19,18 +19,23 @@
     align-items: center;
     text-decoration: none;
     color: black;
-    width: 600px;
+    width: 1200px;
     height: 400px;
 
 }
 #bigCard__title{
+    text-decoration: none;
     font-weight: 700;
     margin: 0px;
-    padding: 0px;
+    padding: 10px;
     font-size: 30px;
     text-align: center;
     font-size: 2rem;
     font-weight: bold;
+}
+#bigCard__link{
+    text-decoration: none;
+    color: black;
 }
 #bigCard__text{
     font-size: 22px;
