--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,10 @@
 <app-header></app-header>
 <app-title> </app-title>
 <div id="cardBox">
-    <app-big-card id="1" image="" title="O novo headphone da apple foi lançado" text=" veja como a qualidade do som foi melhorada, não perca essa oportunidade!" ></app-big-card>
+    <app-big-card id="1" image="/assets/images/headphone.jpeg" title="O novo headphone da apple foi lançado" text=" veja como a qualidade do som foi melhorada, não perca essa oportunidade!" ></app-big-card>
     <div id="smallCardBox">
-        <app-small-card id="2" image="./images/javascript.png" title="Javascript 21 lançado" text="nessa terça feira dia 18 de maio de 2022, o javascript 21 foi lancado"></app-small-card>
-        <app-small-card id="3" image="../images/coding.png" title="Novo exploit encontrado!" text="foi encontrado um exploit no mysql versão 5.7"></app-small-card>
-        <app-small-card id="4" image="keyboard.jpeg" title="Teclado Dinamico" text="veja essa novo teclado dinâmico que foi desenvolvido para facilitar a vida dos programadores"></app-small-card>
+        <app-small-card id="2" image="/assets/images/javascript.png" title="Javascript 21 lançado" text="nessa terça feira dia 18 de maio de 2022, o javascript 21 foi lancado"></app-small-card>
+        <app-small-card id="3" image="/assets/images/coding.jpeg" title="Novo exploit encontrado!" text="foi encontrado um exploit no mysql versão 5.7"></app-small-card>
+        <app-small-card id="4" image="/assets/images/keyboard.jpeg" title="Teclado Dinamico" text="veja essa novo teclado dinâmico que foi desenvolvido para facilitar a vida dos programadores"></app-small-card>
     </div>
 </div>
