--- a/src/app/pages/content/content.component.html
+++ b/src/app/pages/content/content.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
-<app-content-title title="O novo headphone da apple foi lançado"></app-content-title>
-<app-content-text text=" veja como a qualidade do som foi melhorada, não perca essa oportunidade!"></app-content-text>
+<app-content-title title="{{title}}"></app-content-title>
+<app-content-text text="{{text}}"></app-content-text>
