--- a/src/app/components/content-title/content-title.component.html
+++ b/src/app/components/content-title/content-title.component.html
@@ -1,1 +1,1 @@
-<div id="contentTitle" > <h1 id="contentTitle__text">{{title}}</h1></div>
+<div id="image" [ngStyle]="{'background-image': 'url(' + image + ')'}" > <h1 id="contentTitle__text">{{title}}</h1></div>
