--- a/src/app/components/content-title/content-title.component.css
+++ b/src/app/components/content-title/content-title.component.css
@@ -1,3 +1,11 @@
+#image{
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 300px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 #contentTitle__text{
     font-size: 45px;
     display: flex;
