--- a/src/app/pages/content/content.component.html
+++ b/src/app/pages/content/content.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
-<app-content-title title="{{title}}"></app-content-title>
+<app-content-title title="{{title}}" image="{{image}}" ></app-content-title>
 <app-content-text text="{{text}}"></app-content-text>
